# SUML

./: .gitignore  README.md  app.py  requirements.txt
env/: env_autogluton.yaml  environment.yml  environment_with_matplot.yml
kedro_pipeline/crabprediction/: .gitignore  README.md  pyproject.toml  requirements.txt  session_store.db  stats.json
kedro_pipeline/crabprediction/conf/base/: catalog.yml  parameters_data_science.yml
kedro_pipeline/crabprediction/data/06_models/random_forest.pickle/2024-06-22T12.38.56.288Z/: random_forest.pickle
kedro_pipeline/crabprediction/data/06_models/random_forest.pickle/2024-06-22T12.39.12.138Z/: random_forest.pickle
kedro_pipeline/crabprediction/src/crabprediction/: __init__.py  __main__.py  pipeline_registry.py
kedro_pipeline/crabprediction/src/crabprediction/pipelines/data_processing/: nodes.py  pipeline.py
kedro_pipeline/crabprediction/src/crabprediction/pipelines/data_science/: nodes.py  pipeline.py
raw_pipeline/: model_eval.ipynb  requirements.txt
raw_pipeline/data_preprocess/: data_cleaner_module.py
src/: app.py  data_analysis.ipynb  gluon.py  main.py  pipeline.ipynb
src/app/: app.py  environment.yml
src/data_preprocess/: data_cleaner_module.py  data_preparation_module.py
src/download/: import_data_module.py
src/evaluation/: model_metrics_module.py
src/ml/: model_creator_module.py
src/ml/model/: rf_model.sav
